# geotiles

./: .gitignore  CHANGLOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  aditional_files.md  amazing.txt  clippy.toml  initial_convo.md  rustfmt.toml  tests.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ideas/: cube-based hexagonal tiling.md
src/: lib.rs
src/approximation/: mod.rs  regular_hexagon.rs
src/geometry/: face.rs  mod.rs  point.rs  vector.rs
src/hexasphere/: core.rs  export.rs  hexasphere.rs  mod.rs  statistics.rs
src/tile/: core.rs  mod.rs  orientation.rs  thick_tile.rs  tile.rs
src/utils/: coordinates.rs  math.rs  mod.rs
tests/: integration_tests.rs
